--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[lib]
-proc-macro = true
-
 [dependencies]
-darling = "0.20.10"
+macros = { path ="./macros" }
+auth = { path = "./auth" }
+
 cataclysm = "0.2.0-alpha.7"
-syn = { version="1.0", features=["full"] }
-jsonwebtoken = "9.3.0"
-
-
-# Serialization
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.120"
+tokio = "1.39.3"
+dotenvy = "0.15.7"
+colored = "2.1.0"
