--- a/auth/Cargo.toml
+++ b/auth/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 [dependencies]
 cataclysm = "0.2.0-alpha.7"
+# Error handling
+thiserror = "1.0.62"
+## JWT manage
 jsonwebtoken = "9.3.0"
 serde = {version = "1.0.209", features = ["derive"]}
 chrono = "0.4.38"
