--- a/auth/Cargo.toml
+++ b/auth/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-cataclysm = "0.2.0-alpha.7"
+cataclysm = "0.3.0-beta.2"
 # Error handling
 thiserror = "1.0.62"
 ## JWT manage
