--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -10,7 +10,7 @@ proc-macro = true
 
 [dependencies]
 darling = "0.20.10"
-cataclysm = "0.2.0-alpha.7"
+cataclysm = "0.3.0-beta.2"
 syn = { version="1.0", features=["full"] }
 jsonwebtoken = "9.3.0"
 
